# math.ai

./: .env.example  .env.production  .gitignore  .vercelignore  ACADEMIC_FORMAT_IMPLEMENTATION.md  ADMIN_SECURITY_AUDIT.md  BACKEND_FRONTEND_CONNECTION_GUIDE.md  CLAUDE_ONLY_SETUP_COMPLETE.md  COMPLETION_SUMMARY.txt  Dockerfile  FILE_STRUCTURE.md  FINAL_CHECKLIST.md  IMPLEMENTATION_GUIDE.md  INTEGRATION_SUMMARY.md  PRD_COMPLIANCE.md  PROJECT_SUMMARY.md  Procfile  QUICK_START.md  QUICK_START_STREAMING.md  README.md  README_NEW.md  STREAMING_IMPLEMENTATION.md  STREAMING_IMPLEMENTATION_SUMMARY.md  STREAMING_OVERVIEW.md  STREAMING_QUICKSTART.md  STREAMING_TEST_GUIDE.md  STREAM_DEBUG_SCRIPT.js  TODO.md  VERCEL_FIX.md  index.html  package-lock.json  package.json  render.yaml  start-dev.sh  test-streaming.sh  tsconfig.app.json  vercel.json  vite.config.ts
AI_logic/: .DockerIgnore  .env.example  .gitignore  Dockerfile  README.md  Readme.md  check_models.py  payload.json  pyproject.toml  requirements.txt  test_embedding_quality.py  test_streaming.py  tmp_check_import.py  tmp_stream_test.py
AI_logic/.render-venv/: pyvenv.cfg
AI_logic/.render-venv/Scripts/: activate  activate.bat  jsondiff  (+2 more)
AI_logic/chat-history/: ingest_chat.py  verify_history.py
AI_logic/eval/: test_gsm8k.py
AI_logic/evals/: answer_fr.json  curriculum_results.json  questions_fr.json  run_curriculum_test.py
AI_logic/logs/: chat_history.jsonl
AI_logic/myenv/: pyvenv.cfg
AI_logic/scripts/: backfill_costs.py  seed_pricing.py
AI_logic/src/: debug_db.py  init_db.py
AI_logic/tests/: test_credits.py
(+85 files in other folders)
